--- a/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
@@ -2,84 +2,83 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "argo-cd.applicationSet.fullname" . }}
+  name: {{ include "argo-cd.applicationSet.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.applicationSet.name "name" .Values.applicationSet.name) | nindent 4 }}
 spec:
-  replicas: {{ .Values.applicationSet.replicaCount }}
+  replicas: {{ .Values.applicationSet.replicas }}
   selector:
     matchLabels:
       {{- include "argo-cd.selectorLabels" (dict "context" . "name" .Values.applicationSet.name) | nindent 6 }}
   template:
     metadata:
+      labels:
+        {{- include "argo-cd.labels" (dict "context" . "component" .Values.applicationSet.name "name" .Values.applicationSet.name) | nindent 8 }}
+        {{- with (mergeOverwrite (deepCopy .Values.global.podLabels) .Values.applicationSet.podLabels) }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
       {{- with (mergeOverwrite (deepCopy .Values.global.podAnnotations) .Values.applicationSet.podAnnotations) }}
       annotations:
         {{- range $key, $value := . }}
         {{ $key }}: {{ $value | quote }}
         {{- end }}
       {{- end }}
-      labels:
-        {{- include "argo-cd.labels" (dict "context" . "component" .Values.applicationSet.name "name" .Values.applicationSet.name) | nindent 8 }}
-        {{- with (mergeOverwrite (deepCopy .Values.global.podLabels) .Values.applicationSet.podLabels) }}
-          {{- toYaml . | nindent 8 }}
-        {{- end }}
     spec:
       {{- with .Values.applicationSet.imagePullSecrets | default .Values.global.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "argo-cd.applicationSetServiceAccountName" . }}
+      {{- with .Values.global.securityContext }}
       securityContext:
-        {{- toYaml (mergeOverwrite (deepCopy .Values.global.securityContext) .Values.applicationSet.podSecurityContext) | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.applicationSet.priorityClassName }}
+      priorityClassName: {{ . }}
+      {{- end }}
+      serviceAccountName: {{ include "argo-cd.applicationSet.serviceAccountName" . }}
       containers:
         - name: {{ .Values.applicationSet.name }}
-          securityContext:
-            {{- toYaml .Values.applicationSet.securityContext | nindent 12 }}
+          image: {{ default .Values.global.image.repository .Values.applicationSet.image.repository }}:{{ default (include "argo-cd.defaultTag" .) .Values.applicationSet.image.tag }}
+          imagePullPolicy: {{ default .Values.global.image.imagePullPolicy .Values.applicationSet.image.imagePullPolicy }}
           command:
             - entrypoint.sh
             - argocd-applicationset-controller
+            - --argocd-repo-server={{ include "argo-cd.repoServer.fullname" . }}:{{ .Values.repoServer.service.port }}
+            - --policy={{ .Values.applicationSet.policy }}
+            - --dry-run={{ .Values.applicationSet.dryRun }}
             - --logformat
             - {{ default .Values.global.logging.format .Values.applicationSet.logFormat }}
             - --loglevel
             - {{ default .Values.global.logging.level .Values.applicationSet.logLevel }}
-            - --metrics-addr={{ .Values.applicationSet.args.metricsAddr }}
-            - --probe-addr={{ .Values.applicationSet.args.probeBindAddr }}
-            {{- if or (gt ( .Values.applicationSet.replicaCount | int64) 1) .Values.applicationSet.args.enableLeaderElection }}
+            {{- if gt (.Values.applicationSet.replicas | int64) 1 }}
             - --enable-leader-election=true
             {{- end }}
-            - --namespace={{ .Release.Namespace }}
-            - --argocd-repo-server={{ template "argo-cd.repoServer.fullname" . }}:{{ .Values.repoServer.service.port }}
-            - --policy={{ .Values.applicationSet.args.policy }}
-            - --debug={{ .Values.applicationSet.args.debug }}
-            - --dry-run={{ .Values.applicationSet.args.dryRun }}
-            {{- with .Values.applicationSet.extraArgs }}
+            {{- with .Values.applicationSet.args }}
               {{- toYaml . | nindent 12 }}
             {{- end }}
-          image: {{ default .Values.global.image.repository .Values.applicationSet.image.repository }}:{{ default (include "argo-cd.defaultTag" .) .Values.applicationSet.image.tag }}
-          imagePullPolicy: {{ default .Values.global.image.imagePullPolicy .Values.applicationSet.image.imagePullPolicy }}
           ports:
             - name: http
-              containerPort: {{ (split ":" .Values.applicationSet.args.probeBindAddr)._1 }}
+              containerPort: 8081
               protocol: TCP
             - name: metrics
-              containerPort: {{ (split ":" .Values.applicationSet.args.metricsAddr)._1 }}
+              containerPort: 8080
               protocol: TCP
             - name: webhook
               containerPort: 7000
               protocol: TCP
-          {{- with .Values.applicationSet.extraEnv }}
           env:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-          {{- with .Values.applicationSet.extraEnvFrom }}
+            {{- with .Values.applicationSet.env }}
+              {{- toYaml . | nindent 12 }}
+            {{- end }}
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+          {{- with .Values.applicationSet.envFrom }}
           envFrom:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          resources:
-            {{- toYaml .Values.applicationSet.resources | nindent 12 }}
           volumeMounts:
-            - mountPath: /tmp
-              name: tmp-dir
             - mountPath: /app/config/ssh
               name: ssh-known-hosts
             - mountPath: /app/config/tls
@@ -88,27 +87,39 @@ spec:
               name: gpg-keys
             - mountPath: /app/config/gpg/keys
               name: gpg-keyring
-            {{- with .Values.applicationSet.extraVolumeMounts }}
+            - mountPath: /tmp
+              name: tmp
+            {{- with .Values.applicationSet.volumeMounts }}
               {{- toYaml . | nindent 12 }}
             {{- end }}
+          resources:
+            {{- toYaml .Values.applicationSet.resources | nindent 12 }}
+          {{- with .Values.global.hostAliases }}
+          hostAliases:
+            {{- toYaml . | nindent 6 }}
+          {{- end }}
+          {{- with .Values.applicationSet.containerSecurityContext }}
+          securityContext:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
         {{- with .Values.applicationSet.extraContainers }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       volumes:
-      - emptyDir: {}
-        name: tmp-dir
-      - configMap:
+      - name: tmp
+        emptyDir: {}
+      - name: ssh-known-hosts
+        configMap:
           name: argocd-ssh-known-hosts-cm
-        name: ssh-known-hosts
-      - configMap:
+      - name: tls-certs
+        configMap:
           name: argocd-tls-certs-cm
-        name: tls-certs
-      - configMap:
+      - name: gpg-keys
+        configMap:
           name: argocd-gpg-keys-cm
-        name: gpg-keys
-      - emptyDir: {}
-        name: gpg-keyring
-      {{- with .Values.applicationSet.extraVolumes }}
+      - name: gpg-keyring
+        emptyDir: {}
+      {{- with .Values.applicationSet.volumes }}
         {{- toYaml . | nindent 6 }}
       {{- end }}
       {{- with .Values.applicationSet.nodeSelector }}
@@ -122,8 +133,5 @@ spec:
       {{- with .Values.applicationSet.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.applicationSet.priorityClassName }}
-      priorityClassName: {{ . }}
       {{- end }}
 {{- end }}
