--- a/charts/argo-cd/templates/argocd-applicationset/service.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/service.yaml
@@ -2,18 +2,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-{{- if .Values.applicationSet.service.annotations }}
-  annotations:
-  {{- range $key, $value := .Values.applicationSet.service.annotations }}
-    {{ $key }}: {{ $value | quote }}
-  {{- end }}
-{{- end }}
-  name: {{ template "argo-cd.applicationSet.fullname" . }}
+  name: {{ include "argo-cd.applicationSet.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.applicationSet.name "name" .Values.applicationSet.name) | nindent 4 }}
-{{- with .Values.applicationSet.service.labels }}
-{{- toYaml . | nindent 4 }}
-{{- end }}
+    {{- with .Values.applicationSet.service.labels }}
+        {{- toYaml . | nindent 4 }}
+    {{- end }}
+  {{- with .Values.applicationSet.service.annotations }}
+  annotations:
+    {{- range $key, $value := . }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
+  {{- end }}
 spec:
   ports:
   - name: {{ .Values.applicationSet.service.portName }}
