Unify args and extraArgs to args
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -47,7 +47,7 @@ spec:
         - entrypoint.sh
         args:
         - argocd-repo-server
-        {{- with .Values.repoServer.extraArgs }}
+        {{- with .Values.repoServer.args }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.repoServer.containerSecurityContext }}
