--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -41,7 +41,7 @@ spec:
         imagePullPolicy: {{ default .Values.global.image.imagePullPolicy .Values.server.image.imagePullPolicy }}
         command:
         - argocd-server
-        {{- with .Values.server.extraArgs }}
+        {{- with .Values.server.args }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- with .Values.server.containerSecurityContext }}
