--- a/charts/argo-cd/templates/dex/poddisruptionbudget.yaml
+++ b/charts/argo-cd/templates/dex/poddisruptionbudget.yaml
@@ -5,20 +5,20 @@ metadata:
   name: {{ template "argo-cd.dex.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.dex.name "name" .Values.dex.name) | nindent 4 }}
-  {{- with .Values.dex.pdb.labels }}
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- with .Values.dex.pdb.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.dex.pdb.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
+    {{- range $key, $value := . }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
   {{- end }}
 spec:
-  {{- if .Values.dex.pdb.minAvailable }}
-  minAvailable: {{ .Values.dex.pdb.minAvailable }}
-  {{- else if .Values.dex.pdb.maxUnavailable }}
+  {{- if .Values.dex.pdb.maxUnavailable }}
   maxUnavailable: {{ .Values.dex.pdb.maxUnavailable }}
   {{- else }}
-  minAvailable: 0
+  minAvailable: {{ .Values.dex.pdb.minAvailable | default 0 }}
   {{- end }}
   selector:
     matchLabels:
