--- a/charts/argo-cd/templates/dex/service.yaml
+++ b/charts/argo-cd/templates/dex/service.yaml
@@ -3,33 +3,33 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "argo-cd.dex.fullname" . }}
-{{- if .Values.dex.metrics.service.annotations }}
-  annotations:
-  {{- range $key, $value := .Values.dex.metrics.service.annotations }}
-    {{ $key }}: {{ $value | quote }}
-  {{- end }}
-{{- end }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.dex.name "name" .Values.dex.name) | nindent 4 }}
-{{- if .Values.dex.metrics.service.labels }}
-{{- toYaml .Values.dex.metrics.service.labels | nindent 4 }}
-{{- end }}
+    {{ with (mergeOverwrite (deepCopy .Values.dex.metrics.service.labels) (.Values.dex.metrics.enabled | ternary .Values.dex.metrics.service.labels dict)) }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
+  {{- with .Values.dex.service.annotations }}
+  annotations:
+    {{- range $key, $value := . }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
+  {{- end }}
 spec:
   ports:
-  - name: {{ .Values.dex.servicePortHttpName }}
+  - name: {{ .Values.dex.service.http.name }}
     protocol: TCP
-    port: {{ .Values.dex.servicePortHttp }}
+    port: {{ .Values.dex.service.http.port }}
     targetPort: http
-  - name: {{ .Values.dex.servicePortGrpcName }}
+  - name: {{ .Values.dex.service.grpc.name }}
     protocol: TCP
-    port: {{ .Values.dex.servicePortGrpc }}
+    port: {{ .Values.dex.service.grpc.port }}
     targetPort: grpc
-{{- if .Values.dex.metrics.enabled }}
+  {{- if .Values.dex.metrics.enabled }}
   - name: {{ .Values.dex.metrics.service.portName }}
     protocol: TCP
-    port: {{ .Values.dex.servicePortMetrics }}
+    port: {{ .Values.dex.metrics.service.servicePort }}
     targetPort: metrics
-{{- end }}
+  {{- end }}
   selector:
     {{- include "argo-cd.selectorLabels" (dict "context" . "name" .Values.dex.name) | nindent 4 }}
 {{- end }}
