--- a/charts/argo-cd/templates/argocd-repo-server/service.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/service.yaml
@@ -9,6 +9,9 @@ metadata:
 {{- end }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.repoServer.name "name" .Values.repoServer.name) | nindent 4 }}
+{{- if .Values.repoServer.service.labels }}
+{{- toYaml .Values.repoServer.service.labels | nindent 4 }}
+{{- end }}
   name: {{ template "argo-cd.repoServer.fullname" . }}
 spec:
   ports:
