--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -56,13 +56,13 @@ data:
       {{- if .Values.artifactRepository.archiveLogs }}
       archiveLogs: {{ .Values.artifactRepository.archiveLogs }}
       {{- end }}
-      {{- if .Values.artifactRepository.gcs }}
-      gcs:
-{{ toYaml .Values.artifactRepository.gcs | indent 8}}
-      {{- else if .Values.artifactRepository.azure }}
-      azure:
-{{ toYaml .Values.artifactRepository.azure | indent 8}}
-      {{- else }}
+      {{- with .Values.artifactRepository.gcs }}
+      gcs: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.artifactRepository.azure }}
+      azure: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if and  (not .Values.artifactRepository.gcs) (not .Values.artifactRepository.azure) }}
       s3:
         {{- if .Values.useStaticCredentials }}
         accessKeySecret:
@@ -92,7 +92,7 @@ data:
           {{- toYaml . | nindent 10 }}
         {{- end }}
       {{- end }}
-    {{- end}}
+    {{- end }}
     {{- if .Values.controller.metricsConfig.enabled }}
     metricsConfig:
       enabled: {{ .Values.controller.metricsConfig.enabled }}
