fix(argo-workflows): Helm syntax on SSO configuration Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -142,7 +142,7 @@ data:
       issuerAlias: {{ .issuerAlias }}
       {{- end }}
       {{- if .sessionExpiry }}
-      sessionExpiry: .sessionExpiry
+      sessionExpiry: {{ .sessionExpiry }}
       {{- end }}
       {{- if .customGroupClaimName }}
       customGroupClaimName: {{ .customGroupClaimName }}
